gitops/clusters/prrject-fatbaby/10-collections-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collections-server
  namespace: emily
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collections-server
  template:
    metadata:
      labels:
        app: collections-server
    spec:
      containers:
        - name: collections-server
          image: us-central1-docker.pkg.dev/project-d24a71e9-2daf-4b2d-917/emily/collections-server:0.1.0
          ports:
            - containerPort: 8087
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: collections-server
  namespace: emily
spec:
  selector:
    app: collections-server
  ports:
    - port: 8087
      targetPort: 8087
  type: ClusterIP
