gitops/clusters/prrject-fatbaby/32-gfd-wsrelay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gfd-wsrelay
  namespace: emily
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gfd-wsrelay
  template:
    metadata:
      labels:
        app: gfd-wsrelay
    spec:
      securityContext:
        fsGroup: 65532
      containers:
        - name: relay
          image: us-central1-docker.pkg.dev/project-d24a71e9-2daf-4b2d-917/emily/gfd-wsudprelay:0.1.0
          command:
            - /wsudprelay
          args:
            - "--path-mode-port"
            - "8081"
            - "--udp-host"
            - "redgarden-stable-udp.emily.svc.cluster.local"
            - "--matchmaker-port"
            - "8778"
            - "--game-port-start"
            - "8300"
            - "--game-port-count"
            - "20"
          ports:
            - containerPort: 8081
          readinessProbe:
            tcpSocket:
              port: 8081
          volumeMounts:
            - name: var
              mountPath: /app/var
            - name: run
              mountPath: /run/redgarden
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: 100m
              memory: 128Mi
              ephemeral-storage: 256Mi
      volumes:
        - name: var
          emptyDir: {}
        - name: run
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: gfd-wsrelay
  namespace: emily
spec:
  selector:
    app: gfd-wsrelay
  ports:
    - name: p8081
      port: 8081
      targetPort: 8081
  type: ClusterIP
