gitops/clusters/prrject-fatbaby/42-wotan.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wotan
  namespace: emily
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wotan
  template:
    metadata:
      labels:
        app: wotan
    spec:
      securityContext:
        fsGroup: 65532
      containers:
        - name: wotan
          image: us-central1-docker.pkg.dev/project-d24a71e9-2daf-4b2d-917/emily/wotan:2252e13
          command:
            - /run-nginx.sh
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
          volumeMounts:
            - name: var
              mountPath: /var/cache/nginx
            - name: run
              mountPath: /run/wotan
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
              ephemeral-storage: 256Mi
            limits:
              cpu: 50m
              memory: 64Mi
              ephemeral-storage: 256Mi
      volumes:
        - name: var
          emptyDir: {}
        - name: run
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: wotan
  namespace: emily
spec:
  selector:
    app: wotan
  ports:
    - name: p80
      port: 80
      targetPort: 80
  type: ClusterIP
