gitops/clusters/prrject-fatbaby/91-edge-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: edge-gw
  namespace: emily
  annotations:
    networking.gke.io/certmap: edge-certs
spec:
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
  addresses:
    - type: NamedAddress
      value: gateway-edge
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gfd-wsrelay
  namespace: emily
spec:
  parentRefs:
    - name: edge-gw
  hostnames:
    - ws.rg.okemily.com
  rules:
    - backendRefs:
        - name: gfd-wsrelay
          port: 8081
