gitops/clusters/prrject-fatbaby/92-iduna-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iduna
  namespace: emily
spec:
  parentRefs:
    - name: edge-gw
  hostnames:
    - iam.okemily.com
    - console.okemily.com
  rules:
    - backendRefs:
        - name: iduna
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: iduna-iam-root
  namespace: emily
spec:
  parentRefs:
    - name: edge-gw
  hostnames:
    - iam.okemily.com
  rules:
    - matches:
        - path: {type: Exact, value: /}
      filters:
        - type: RequestRedirect
          requestRedirect:
            path: {type: ReplaceFullPath, replaceFullPath: /api/v1/auth/sso/login}
            statusCode: 302
