gitops/clusters/prrject-fatbaby/93-wotan-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wotan
  namespace: emily
spec:
  parentRefs:
    - name: edge-gw
  hostnames:
    - wotan.okemily.com
  rules:
    - matches:
        - path: {type: PathPrefix, value: /api/}
      backendRefs:
        - name: iduna
          port: 8080
    - matches:
        - path: {type: PathPrefix, value: /DEADWEIGHT/ws}
      backendRefs:
        - name: deadweight
          port: 8765
    - backendRefs:
        - name: wotan
          port: 80
