gitops/clusters/prrject-fatbaby/97-carepyre-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: carepyre
  namespace: emily
spec:
  parentRefs:
    - name: edge-gw
  hostnames:
    - carepyre.org
    - www.carepyre.org
  rules:
    - backendRefs:
        - name: carepyre
          port: 80
