gitops/clusters/prrject-fatbaby/98-mixforge-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mixforge
  namespace: emily
spec:
  parentRefs:
    - name: edge-gw
  hostnames:
    - mixforge.okemily.com
  rules:
    - backendRefs:
        - name: mixforge
          port: 80
